--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="col-md-12">
 
                     <h1>I Am a Journalist and Programmer</h1>
-                    <div class="byline">By <a href="#">Your Name Here, Esq.</a></div>
+                    <div class="byline">By <a href="#">Jack Howard, Esq.</a></div>
 
                     <div class="meta">
                         Published October 18th, 2014
@@ -36,7 +36,13 @@
                 </div>
             </header>
 
+
             <section class="row">
+
+                <div class="col-md-12">
+                    <h3 class="playerName"></h3>
+                    <p>Career Home Runs</p>
+                </div>
 
             <div class="col-md-12 chart"></div>
 
